--- a/testing/Input/soils_v30.in
+++ b/testing/Input/soils_v30.in
@@ -2,7 +2,7 @@
 # Location: 
 #
 # depth = (cm) lower limit of layer; layers must be in order of depth.
-# matricd = (g/cm^3) density of soil matric component of this layer (will be converted to bulk density with eq. 20 from from Saxton and Rawls 2006 SSAJ).
+# matricd = (g/cm^3) bulk density of soil in this layer.
 # gravel_content = the percent volume of each layer composed of gravel (i.e., particles > 2mm)
 # evco = (frac) proportion of total baresoil evap from this layer.
 # trco = (frac) proportion of total transpiration from this layer for each vegetation type (tree, forb, shrub, grass)
@@ -12,13 +12,15 @@
 # soiltemp = the initial temperature of each soil layer (in celcius), from the day before the simulation starts
 # Note that the evco and trco columns must sum to 1.0 or they will
 # be normalized.
-#
-# depth 	matricd   gravel_content   	evco  	trco_grass  	trco_shrub  	trco_tree  	trco_forb	%sand  	%clay 	imperm 	soiltemp
-5		1.43		0		0.8122	0.0333		0.1336		0.0333		0.1336		0.5100	0.1500	0	0.1860	
-10		1.41		0		0.1534	0.0333		0.0936		0.0333		0.0936		0.4400	0.2600	0	0.3719	
-20		1.39		0		0.0344	0.0667		0.1762		0.0667		0.1762		0.3500	0.4100	0	0.7438	
-30		1.39		0		0.0000	0.0667		0.1746		0.0667		0.1746		0.3200	0.4500	0	1.1158	
-40		1.38		0		0.0000	0.0667		0.1098		0.0667		0.1098		0.3100	0.4700	0	1.4877	
-60		1.15		0		0.0000	0.1333		0.1787		0.1333		0.1787		0.3200	0.4700	0	2.2315	
-80		1.31		0		0.0000	0.1333		0.1011		0.1333		0.1011		0.5700	0.2800	0	2.9754	
-85		1.31		0		0.0000	0.1333		0.1011		0.1333		0.1011		0.5700	0.2800	0	2.9754
+# Soil texture data for 3 top layers from Trace's MT data. Rest of soil texture from STATSGO.
+# Note: matricd, evco, soil temp for all soil layers from Bradford & Lauenroth 2006 Appendix.
+
+# depth    matricd    gravel_content    evco    trco_grass    trco_shrub    trco_tree    trco_forb    %sand    %clay    imperm    soiltemp
+ 10.000      1.430      0.000          0.500         0.100         0.100        0.100        0.100    0.450    0.18     0.000       0.186
+ 20.000      1.410      0.000          0.350         0.250         0.250        0.250        0.250    0.480    0.19     0.000       0.372
+ 30.000      1.390      0.000          0.150         0.300         0.300        0.300        0.300    0.530    0.16     0.000       0.744
+ 40.000      1.390      0.000          0.000         0.200         0.200        0.200        0.200    0.530    0.16     0.000       1.116
+ 60.000      1.380      0.000          0.000         0.100         0.100        0.100        0.100    0.530    0.16     0.000       1.488
+ 80.000      1.150      0.000          0.000         0.050         0.050        0.050        0.050    0.530    0.16     0.000       2.232
+ 100.00      1.310      0.000          0.000         0.000         0.000        0.000        0.000    0.530    0.16     0.000       2.975
+ 150.00      1.310      0.000          0.000         0.000         0.000        0.000        0.000    0.530    0.16     0.000       2.975
