--- a/testing/Input/siteparam_v26.in
+++ b/testing/Input/siteparam_v26.in
@@ -1,7 +1,7 @@
 # ---- SWC limits ----
 -1.0			# swc_min : cm/cm if 0 - <1.0, -bars if >= 1.0.; if < 0. then estimate residual water content for each layer
-15.0			# swc_init: cm/cm if < 1.0, -bars if >= 1.0. 
-15.0			# swc_wet : cm/cm if < 1.0, -bars if >= 1.0. 
+15.0			# swc_init: cm/cm if < 1.0, -bars if >= 1.0.
+15.0			# swc_wet : cm/cm if < 1.0, -bars if >= 1.0.
 
 # ---- Model flags and coefficients ----
 0			# reset (1/0): reset/don't reset swc each new year
@@ -27,10 +27,10 @@
 # These control the tangent function (tanfunc) which affects the amount of soil
 # water extractable by evaporation and transpiration.
 # These constants aren't documented by the ELM doc.
-45.          # rate shift (x value of inflection point).  lower value shifts curve 
+45.          # rate shift (x value of inflection point).  lower value shifts curve
              # leftward, meaning less water lost to evap at a given swp.  effectively
              # shortens/extends high rate.
-.1          # rate slope: lower value (eg .01) straightens S shape meaning more gradual 
+.1          # rate slope: lower value (eg .01) straightens S shape meaning more gradual
              # reduction effect; higher value (.5) makes abrupt transition
 .25           # inflection point (y-value of inflection point)
 0.5          # range: diff btw upper and lower rates at the limits
@@ -62,10 +62,17 @@
 990.		# max depth for the soil_temperature function equation, default is 180.  this number should be evenly divisible by deltaX
 0			# flag, 1 to calculate soil_temperature, 0 to not calculate soil_temperature
 
+# ---- CO2 Settings ----
+# Retro scenarios (<= 2010): biomass stomatal
+1 1
+# Future scenarios (> 2010): biomass stomatal
+1 1
+# RCP
+85
 
 # ---- Transpiration regions ----
 # ndx  : 1=shallow, 2=medium, 3=deep, 4=very deep
-# layer: deepest layer number of the region. 
+# layer: deepest layer number of the region.
 # Grasses	Shrubs		Trees		Forbs
 #        Layers are defined in soils.in.
 # ndx    layer
