--- a/testing/Input/outsetup_v31.in
+++ b/testing/Input/outsetup_v31.in
@@ -1,10 +1,10 @@
 # Output setup file for SOILWAT
 #
 # Notes:
-# Time periods available:  DY,WK,MO,YR 
-#   eg, if DY is chosen then 100,200 would mean to use the second hundred days 
-#   But if YR is chosen, start and end numbers are in days so only those days 
-#   are reported for the yearly average. 
+# Time periods available:  DY,WK,MO,YR
+#   eg, if DY is chosen then 100,200 would mean to use the second hundred days
+#   But if YR is chosen, start and end numbers are in days so only those days
+#   are reported for the yearly average.
 # Some keys from older versions (fortran and the c versions mimicking the fortran
 #   version) are not currently implemented:
 #   ALLH20, WTHR.
@@ -25,18 +25,18 @@
 #  AVG - average the variable over the output period
 #  FIN - output value of final day in the period; soil water variables only.
 # Note that SUM and AVG are the same if timeperiod = dy.
-#  
+#
 # (3-Sep-03) OUTSEP key indicates the output separator.  This method
-# allows older files to work with the new version.  The default is a 
+# allows older files to work with the new version.  The default is a
 # tab.  Other options are 's' or 't' for space or tab (no quotes)
 # or any other printable character as itself (eg, :;| etc).  The given
 # separator will apply to all of the output files.  Note that only lowercase
 # letters 's' or 't' are synonyms.
 #
-# (01/17/2013) TIMESTEP key indicates which periods you want to output. 
-# You can output all the periods at a time, just one, or however many 
-# you want. To change which periods to output type 'dy' for day, 
-# 'wk' for week, 'mo' for month, and 'yr' for year after TIMESTEP 
+# (01/17/2013) TIMESTEP key indicates which periods you want to output.
+# You can output all the periods at a time, just one, or however many
+# you want. To change which periods to output type 'dy' for day,
+# 'wk' for week, 'mo' for month, and 'yr' for year after TIMESTEP
 # in any order. For example: "TIMESTEP mo wk" will output for month and week
 OUTSEP t
 TIMESTEP dy wk mo yr
@@ -49,8 +49,8 @@ RUNOFF 			sum 	 	WK		1 		end 		runoff			/* runoff (cm): total runoff, runoff fro
 VWCBULK			avg		MO		1		end		vwc_bulk		/* bulk volumetric soilwater (cm / layer)
 VWCMATRIC		avg		YR		1		end		vwc_matric		/* matric volumetric soilwater (cm / layer)
 SWCBULK			avg		DY		1		end		swc_bulk		/* bulk soilwater content (cm / cm layer); swc.l1(today) = swc.l1(yesterday)+inf_soil-lyrdrain.l1-transp.l1-evap_soil.l1; swc.li(today) = swc.li(yesterday)+lyrdrain.l(i-1)-lyrdrain.li-transp.li-evap_soil.li; swc.llast(today) = swc.llast(yesterday)+lyrdrain.l(last-1)-deepswc-transp.llast-evap_soil.llast  */
-SWABULK			avg		MO		1		end		swa_bulk		/* bulk available soil water (cm/layer) = swc - wilting point */
-SWAMATRIC		avg		YR		1		end		swa_matric		/* matric available soil water (cm/layer) = swc - wilting point */
+SWABULK			avg		MO		1		end		swa_bulk		/* DEFUNCT: MAY BE REMOVED IN FUTURE VERSIONS; bulk available soil water (cm/layer) = swc - wilting point */
+SWAMATRIC		avg		YR		1		end		swa_matric		/* DEFUNCT: MAY BE REMOVED IN FUTURE VERSIONS; matric available soil water (cm/layer) = swc - wilting point */
 SWPMATRIC		avg		WK		1		end		swp_matric		/* matric soilwater potential (-bars) */
 SURFACEWATER		avg		DY		1		end		surface_water		/* surface water (cm)   */
 TRANSP			sum		YR		1		end		transp			/* transpiration from each soil layer (cm): total, trees, shrubs, forbs, grasses     */
