--- a/testing/Input/outsetup_v31.in
+++ b/testing/Input/outsetup_v31.in
@@ -28,7 +28,7 @@
 #  
 # (3-Sep-03) OUTSEP key indicates the output separator.  This method
 # allows older files to work with the new version.  The default is a 
-# tab.  Other options are 's' or 't' for space or tab (no quotes)
+# csv. Other options are 'c' or 's' or 't' for comma or space or tab (no quotes)
 # or any other printable character as itself (eg, :;| etc).  The given
 # separator will apply to all of the output files.  Note that only lowercase
 # letters 's' or 't' are synonyms.
@@ -38,7 +38,7 @@
 # you want. To change which periods to output type 'dy' for day, 
 # 'wk' for week, 'mo' for month, and 'yr' for year after TIMESTEP 
 # in any order. For example: "TIMESTEP mo wk" will output for month and week
-OUTSEP t
+OUTSEP c
 TIMESTEP dy wk mo yr
 
 # key			SUMTYPE		PERIOD		start	end		filename_prefix
