Close #15: Reformat CO2 code
Tabs to spaces, reducing reliance on hard-coded values, constructor, comments, change the stomatal term to water-usage efficiency, be more consistent on variable names

--- a/testing/Input/siteparam_v26.in
+++ b/testing/Input/siteparam_v26.in
@@ -63,9 +63,9 @@
 0			# flag, 1 to calculate soil_temperature, 0 to not calculate soil_temperature
 
 # ---- CO2 Settings ----
-# Use biomass
+# Use biomass multiplier
 1
-# Use stomatal
+# Use water-usage efficiency multiplier
 1
 # Scenario
 RCP85
