--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,4 +7,5 @@ matrix:
 
 # to run your custom scripts instead of automatic MSBuild
 build_script:
-  make compile
+  - set HOME=c:\cygwin\home\appveyor
+  - c:\cygwin\bin\make compile
