appveyor-ci: set path to include cyginw\bin
- previous yaml instructions failed with
> c:\cygwin\bin\make compile
> gcc -O3 -Wall -Wextra -o sw_v31 ...
> make: gcc: Command not found

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,5 +7,5 @@ matrix:
 
 # to run your custom scripts instead of automatic MSBuild
 build_script:
-  - set HOME=c:\cygwin\home\appveyor
-  - c:\cygwin\bin\make compile
+  - set PATH=%PATH%;c:\cygwin\bin
+  - make compile
