--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,8 @@ language: c
 compiler:
   - clang
   - gcc
-script: make compilel
+script:
+  make compilel
+  make gtest
+  ./sw_test
+  make gtest_clean cleaner
