Add submodule intitialization to appveyor for CI

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,6 +5,9 @@ platform:
 matrix:
   fast_finish: true
 
+install:
+  - git submodule update --init --recursive
+  
 # to run your custom scripts instead of automatic MSBuild
 build_script:
   - set PATH=%PATH%;c:\cygwin\bin
