--- a/testing/Input/sbe_prod_v31.in
+++ b/testing/Input/sbe_prod_v31.in
@@ -74,6 +74,7 @@
 -3.5		-3.9		-2.0		-2.0
 
 # CO2 Coefficients: Coeff1 * ppm^Coeff2
+# Coefficients assume that monthly biomass reflect values for conditions at 360 ppm CO2
 # Biomass
 # Grasses  Shrubs  Trees  Forbs
   0.127    0.127   0.127  0.127  # Coeff1
