--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ compiler:
   - clang
   - gcc
 script:
-  - make compilel
-  - make gtest
-  - ./sw_test
+  - make bin
+  - make test test_run
   - make cleaner
