Attempts to fix appveyor.yml
Appveyor fails with:
> sw_test.exe
> make: sw_test.exe: Command not found

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,4 +13,8 @@ build_script:
   - set PATH=%PATH%;c:\cygwin\bin
   - make bin
   - make test test_runWin
+  - ls -alp
+  - sw_test
+  - sw_test.exe
+  - make test_run
   - make cleaner
