Add code coverage
- close #20

- makefile gained targets to estimate code coverage
* 'make cov' = same as 'make test' but with code coverage support
* 'make cov_run' = run unit tests and gcov on each source file (which
were in a previous step compiled with 'make cov')

- new bash script 'run_gcov.sh' which executes 'gcov' for each source
file; used by 'make cov_run'

- updated travis-ci yml to run code coverage unit tests and connect to
'codecov' server

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,10 @@ language: c
 compiler:
   - clang
   - gcc
+
 script:
   - make bin
-  - make test test_run
-  - make cleaner
+  - make cov cov_run
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash) || echo "Codecov did not collect coverage reports"
