Improve travis-ci run of code coverage
- don't execute 'gcov' for unit test code or 'googletest' submodule
- 'codecov' will run 'gcov' so that we can use 'make test_run' instead
of 'make cov_run'

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ compiler:
 
 script:
   - make bin
-  - make cov cov_run
+  - make cov test_run
 
 after_success:
   - bash <(curl -s https://codecov.io/bash) || echo "Codecov did not collect coverage reports"
