--- a/testing/Input/sbe_prod_v31.in
+++ b/testing/Input/sbe_prod_v31.in
@@ -73,16 +73,15 @@
 # Grasses	Shrubs		Trees		Forbs
 -3.5		-3.9		-2.0		-2.0
 
-# CO2 Coefficients: Coeff1 * ppm^Coeff2
+
+# ---- CO2 Coefficients: Coeff1 * ppm^Coeff2
 # Coefficients assume that monthly biomass reflect values for conditions at 360 ppm CO2
-# Biomass
 # Grasses  Shrubs  Trees  Forbs
-  0.127    0.127   0.127  0.127  # Coeff1
-  0.3501   0.3501  0.3501 0.3501 # Coeff2
-# WUE
-# Grasses  Shrubs  Trees  Forbs
-  22.464   22.464  22.464 22.464 # Coeff1
-  -0.531   -0.531  -0.531 -0.531 # Coeff2
+  0.1319  0.1319  0.1319 0.1319  # Biomass Coeff1
+  0.3442  0.3442  0.3442 0.3442  # Biomass Coeff2
+  25.158  25.158  25.158 25.158  # WUE Coeff1
+  -0.548  -0.548  -0.548 -0.548  # WUE Coeff2
+
 
 # Grasslands component:
 # -------------- Monthly production values ------------
