Changes to appveyor.yml
Added additional 'make cleaner' argument to build script.

Appveyor is currently failing because it still trying to execute the SW_Flow_Lib_test.file

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,6 +11,7 @@ install:
 # to run your custom scripts instead of automatic MSBuild
 build_script:
   - set PATH=%PATH%;c:\cygwin\bin
+  - make cleaner
   - make bin
   - make test test_run
   - make cleaner
