CI check commit -- undo afterwards
- turn on print debug statement in 'soil_temperature_today'
- turn on soil temperature calculations
- on CIs: run make bint_run instead of make bin and with flag SWDEBUG
defined

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,9 @@ compiler:
   - gcc
 
 script:
-  - make bin
-  - make cov test_run
+  - export CPPFLAGS=-DSWDEBUG && make cleaner bint_run
+  - make cleaner cov test_run
+  - make cleaner
 
 after_success:
   - bash <(curl -s https://codecov.io/bash) || echo "Codecov did not collect coverage reports"
