--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,7 +11,6 @@ install:
 # to run your custom scripts instead of automatic MSBuild
 build_script:
   - set PATH=%PATH%;c:\cygwin\bin
-  - make cleaner
-  - make bin
-  - make test test_run
+  - set CPPFLAGS=-DSWDEBUG && make cleaner bint_run
+  - make cleaner test test_run
   - make cleaner
