Default output periods should include every possible value for proper testing
--> this commit requires that downstream dependencies are updated

--- a/testing/Input/outsetup.in
+++ b/testing/Input/outsetup.in
@@ -41,7 +41,7 @@
 #
 
 OUTSEP c
-TIMESTEP dy yr # must be lowercase
+TIMESTEP dy wk mo yr # must be lowercase
 
 #      key     SUMTYPE   PERIOD   start    end    filename_prefix   comment
          TEMP     AVG       WK       1     end        temp_air      /* max., min, average temperature (C) */
