New `make` target `testci`
- more strict instrumentation options are now used for target `test`: this requires relatively recent compilers
- the current CI setup does not support those options; thus, the targets `testci` and `cov` avoid those options that require recent compiler versions

-> updated `.gitignore`, `.travis.yml`, and `appveyor.yml`

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,6 @@ doc/html/*
 # Binary files
 SOILWAT2
 testing/SOILWAT2
-libSOILWAT2.a
-libSOILWAT2++.a
-libcovSOILWAT2++.a
+libSOILWAT2*
+libcovSOILWAT2*
+
