--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,19 @@
 language: c
-compiler:
-  - clang
-  - gcc
+
+matrix:
+  include:
+    - os: linux
+      compiler: clang
+      env:
+        - MATRIX_EVAL="CC=clang && CXX=clang++"
+
+    - os: linux
+      compiler: gcc
+      env:
+        - MATRIX_EVAL="CC=gcc && CXX=g++"
+
+before_install:
+  - eval "${MATRIX_EVAL}"
 
 script:
   - export CPPFLAGS=-DSWDEBUG && make cleaner bint_run
