Simplified `makefile` and made c code more compatible with c++
- close #213 (remove "-Werror" from production builds; now only used as part of `warning_flags_severe`)
- address #208 (resolved for `make test` because we now compile the library with CC and the test binary with CXX; not resolved for `make test_severe` and `make cov`)

- wrapped all c header files in "extern C" to avoid name mangling:
- fixed global variable definitions in file `test/sw_maintest.cc`

- makefile
* gained target `help`
* renamed targets `test` and `testci` to `test_severe` and `test`

- updated yml instructions of CIs
- updated README

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,16 @@ compiler:
   - gcc
 
 script:
-  - export CPPFLAGS=-DSWDEBUG && make cleaner bint_run
-  - make cleaner cov test_run
+  # compile and run optimized binary
+  - make clean bin bint_run
+  # compile and run debug binary
+  - make clean bin_debug_severe bint_run
+  # compile and run (severe) unit tests
+  - make clean test_severe test_run
+  # determine code coverage of unit tests
+  - make clean cov test_run
 
 after_success:
   - bash <(curl -s https://codecov.io/bash) || echo "Codecov did not collect coverage reports"
-  - make cleaner
+  # clean up
+  - make clean
