Express toolchain version dependencies explicitly
- required `gcc >= v4.9` and `clang >= v3.3` for the `*_severe` test/debug targets
- updated README and makefile

- updated `.travis.yml` to upgrade to `g++` v4.9 (from currently default v4.8.4); default clang version is v5.0.0 >= v3.3

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,21 @@
 language: cpp
 
+# We want to run the `*_severe` debug and test targets; thus, we need
+# g++ >= 4.9 and clang++ >= 3.5
 compiler:
   - clang
   - gcc
+
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - gcc-4.9
+      - g++-4.9
+
+before_install:
+  - if [[ $CXX = g++ ]]; then export CXX="g++-4.9" CC="gcc-4.9"; fi
 
 script:
   # compile and run optimized binary
