--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,17 @@
 language: cpp
 
 # We want to run the `*_severe` debug and test targets; thus, we need
+# to enable ptrace capability for (L/A)SAN which is currently not possible
+# with container-based builds on travis-ci
+# TODO: revert to `sudo: false` once the following are fixed/made possible
+# - https://github.com/google/sanitizers/issues/764
+# - https://github.com/travis-ci/travis-ci/issues/9033
+sudo: required
+
+matrix:
+  fast_finish: true
+
+# We want to run the `*_severe` debug and test targets; thus, we need
 # g++ >= 4.9 and clang++ >= 3.5
 compiler:
   - clang
