--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ script:
   # compile and run debug binary
   - make clean bin_debug_severe bint_run
   # compile and run (severe) unit tests
-  - make clean test_severe test_run
+  - ASAN_OPTIONS=detect_leaks=1 LSAN_OPTIONS=suppressions=.LSAN_suppr.txt make clean test_severe test_run
   # determine code coverage of unit tests
   - make clean cov test_run
 
