--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,9 @@
 	path = googletest
 	url = https://github.com/google/googletest
 	branch = master
+[submodule "pcg_rng"]
+	path = pcg_rng
+	url = https://github.com/DrylandEcology/SOILWAT2.git
+[submodule "pcg"]
+	path = pcg
+	url = https://github.com/imneme/pcg-c-basic
