--- a/testing/Input/veg.in
+++ b/testing/Input/veg.in
@@ -11,11 +11,6 @@
 	0.167	0.143	0.106	0.167	0.15 # albedo: (Houldcroft et al. 2009) MODIS snowfree 'grassland', 'open shrub', ‘evergreen needle forest’ with MODIS albedo aggregated over pure IGBP cells where NDVI is greater than the 98th percentile NDVI
 
 
-# ---- % Cover: divide standing LAI by this to get % cover
-# Grasses	Shrubs	Trees	Forbs
-	3.0	2.22	5.0	3.0
-
-
 # -- Canopy height (cm) parameters either constant through season or as tanfunc with respect to biomass (g/m^2)
 # Grasses	Shrubs	Trees	Forbs
 	300.0	0.0	0.0	300.0	# xinflec
@@ -25,20 +20,15 @@
 	0.0	50.	1200.	0.0	# if > 0 then constant canopy height (cm)
 
 
-# --- Vegetation interception parameters for equation: intercepted rain = (a + b*veg) + (c+d*veg) * ppt; Grasses+Shrubs: veg=vegcov, Trees: veg=LAI
+# --- Vegetation interception parameters: kSmax * log10(1 + LAI_live + kdead * LAI_dead)
 # Grasses	Shrubs	Trees	Forbs
-	0.0182	0.			0.00461	0.0182	# a
-	0.0065	0.0026	0.01405	0.0065	# b
-	0.0019	0.			0.0383	0.0019	# c
-	0.0054	0.0033	0.0337	0.0054	# d
+	1.0			2.6			2.0		1.0	# kSmax (mm)
+	1.0			0.1			0.01	0.5	# kdead (0-1 fraction)
 
 
-# --- Litter interception parameters for equation: intercepted rain = (a + b*litter) + (c+d*litter) * ppt
+# --- Litter interception parameters: kSmax * log10(1 + litter_density)
 # Grasses	Shrubs	Trees	Forbs
-	0.0151	0.0151	0.0151	0.0151	# a
-	0.00005	0.00005	0.00005	0.00005	# b
-	0.0116	0.0116	0.0116	0.0116	# c
-	0.00002	0.00002	0.00002	0.00002	# d
+	0.113		0.113		0.290	0.113	# kSmax (mm)
 
 
 # ---- Parameter for partitioning of bare-soil evaporation and transpiration as in Es = exp(-param*LAI)
