--- a/testing/Input/veg.in
+++ b/testing/Input/veg.in
@@ -74,14 +74,29 @@
 	-0.548	-0.548	-0.548	-0.548	# WUE Coeff2
 
 
-# Grasslands component:
 # -------------- Monthly production values ------------
+# Input biomass per unit area (g / m2) for each vegetation type represent
+# values as if that vegetation type covers 100% of the simulated surface.
+# That way input biomass values are independent of the input composition values.
+# For example,
+#   - inputs for forbs: fCover = 0.4, biomass = 300 g/m2
+#   - inputs for grasses: fCover = 0.6, biomass = 450 g/m2
+# Then, SOILWAT2 simulates a surface with vegetation of
+#     fCover = 1 (= 0.4 + 0.6)
+# and a
+#     total biomass = 390 g / m2 (= 0.4 * 300 + 0.6 * 450)
+# of which
+#     forb biomass = 120 g / m2 (0.4 * 300)
+# and
+#     grass biomass = 270 g/m2 (= 0.6 * 450).
+
 # Litter   - dead leafy material on the ground (g/m^2 ).
 # Biomass  - living and dead/woody aboveground standing biomass (g/m^2).
 # %Live    - proportion of Biomass that is actually living (0-1.0).
 # LAI_conv - monthly amount of biomass needed to produce LAI=1.0 (g/m^2).
 # There should be 12 rows, one for each month, starting with January.
-#
+
+# Grasslands component:
 #Litter  Biomass  %Live LAI_conv
  75.0    150.0    0.00  300.     # January
  80.0    150.0    0.00  300.     # February
