--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ addons:
     packages:
       - gcc-4.9
       - g++-4.9
+      - doxygen
 
 before_install:
   - if [[ $CXX = g++ ]]; then export CXX="g++-4.9" CC="gcc-4.9"; fi
@@ -37,8 +38,18 @@ script:
   - ASAN_OPTIONS=detect_leaks=1 LSAN_OPTIONS=suppressions=.LSAN_suppr.txt make clean test_severe test_run
   # determine code coverage of unit tests
   - make clean cov test_run
+  # check that doxygen generates documentation without warnings
+  # note: doxygen version on travis-ci is currently 1.8.6 (instead of 1.8.15),
+  # thus, warnings about unsupported tags are ok, but we first need to downgrade the Doxyfile
+  - if [[ $(doxygen --version) != 1.8.15 ]]; then doxygen -u Doxyfile &>/dev/null; fi
+    doxygen Doxyfile | grep -wF "warning"
+
+before_cache:
+  # don't cache generated documentation files
+  - rm -rf doc/html
 
 after_success:
+  # have `codecov` collect code coverage results
   - bash <(curl -s https://codecov.io/bash) || echo "Codecov did not collect coverage reports"
   # clean up
   - make clean
