--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ script:
   # note: doxygen version on travis-ci is currently 1.8.6 (instead of 1.8.15),
   # thus, warnings about unsupported tags are ok, but we first need to downgrade the Doxyfile
   - if [[ $(doxygen --version) != 1.8.15 ]]; then doxygen -u Doxyfile &>/dev/null; fi
-    doxygen Doxyfile | grep -wF "warning"
+  - doxygen Doxyfile | grep -wF "warning"
 
 before_cache:
   # don't cache generated documentation files
