New script to create documentation and report warnings (disregard exceptions)
- fix https://github.com/DrylandEcology/SOILWAT2/issues/266#issuecomment-514793852
- addressing #266

- new script `tools/run_doxygen.sh`
- new make targets: "doc" and "doc_clean"

- continuous integration: travis-ci will now use the new script which fails on warnings, but disregards exceptions that are documented in the new file `doc/doxygen_exceptions.txt`

- currently, there is one known exception, see #267

- moved `Doxyfile` to `doc/` (addressing #89)

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ sw_test
 
 # Doxygen documentation files: they should be produced locally
 doc/html/*
+doc/log_doxygen.log
 
 # Binary files
 SOILWAT2
