Add input files to user manual
- include input files verbatim
- this requires that the `doxyfile` "EXAMPLE_PATH" is set correctly

--- a/testing/files.in
+++ b/testing/files.in
@@ -28,7 +28,7 @@ Input/swcsetup.in	# params for handling measured swc
 
 #Output
 Output/	# 'relative' path for output files: / for same directory, or e.g., Output/; PROGRAMMER NOTE: This is currently the 13th position; if this changes then update function SW_Files.c/SW_F_read()
-Input/outsetup.in	# define output quantities
+Input/outsetup.in	# select output quantities
 Output/sw2_daily.csv	#output
 Output/sw2_weekly.csv	#output
 Output/sw2_monthly.csv	#output
