--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ sw_test
 # Doxygen documentation files: they should be produced locally
 doc/html/*
 doc/log_doxygen.log
+doc/Doxyfile.bak
 
 # Binary files
 SOILWAT2
